Remove the Core project since everything which needs a reference to the Changeset class already includes a reference to the ElasticSearch project.
Adjust the mappings to add suggestion fields for the repository, branch and
author.

--- a/DotNetCodeSearch.ElasticSearch/DotNetCodeSearch.ElasticSearch.csproj
+++ b/DotNetCodeSearch.ElasticSearch/DotNetCodeSearch.ElasticSearch.csproj
@@ -51,15 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Changeset.cs" />
     <Compile Include="ChangesetElasticSearchClient.cs" />
     <Compile Include="ElasticSearchClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DotNetCodeSearch.Core\DotNetCodeSearch.Core.csproj">
-      <Project>{cb8b6825-6e98-4a06-a61a-7a8d7df1f4a2}</Project>
-      <Name>DotNetCodeSearch.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
