--- a/IndexerApp/IndexerApp.csproj
+++ b/IndexerApp/IndexerApp.csproj
@@ -48,9 +48,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotNetCodeSearch.ElasticSearch\DotNetCodeSearch.ElasticSearch.csproj">
+    <ProjectReference Include="..\DotNetCodeSearch.Elasticsearch\DotNetCodeSearch.Elasticsearch.csproj">
       <Project>{2dcccd0b-f966-436e-8c0e-68456edc36b4}</Project>
-      <Name>DotNetCodeSearch.ElasticSearch</Name>
+      <Name>DotNetCodeSearch.Elasticsearch</Name>
     </ProjectReference>
     <ProjectReference Include="..\DotNetCodeSearch.Mercurial\DotNetCodeSearch.Mercurial.csproj">
       <Project>{6730f3f6-5901-4ef6-a4f1-edc4bec64c9f}</Project>
